Created footer, added content to home, edited nav.

--- a/apps/rubbish/src/app/footer/footer.component.html
+++ b/apps/rubbish/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<footer><p>FOOTER IS WORKING</p>></footer>
+<footer>
+  <mat-toolbar color="primary">
+    <p>&copy; Copyright {{today | date:'yyyy'}} Zen Tech</p>
+  </mat-toolbar>
+</footer>
