--- a/apps/rubbish/src/app/home/home.component.html
+++ b/apps/rubbish/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<p>
-  This is the home page!
-</p>
+<div class="section header">
+  <h2>Welcome to {{appName}}</h2>
+  <p>Join the fight against Waterway Litter!</p>
+</div>
+
+<div class="section">
+  <h4>Why {{appName}}?</h4>
+  <p>We want to educate people on the impact of waterway litter in an interactive and rewarding way. That's why we created {{appName}}.</p>
+</div>
+
+<div class="section">
+  <h4>How to use {{appName}}?</h4>
+  <p>
+    Upload an image to our service and using computer vision technology our servers will identify different types of litter in your photo.
+    The more litter you identify and remove from your local waterways, the more points you will earn.
+  </p>
+</div>
