--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
 <nav>
   <mat-toolbar color="primary">
-      <button routerLink="/" mat-button>Home</button>
-      <button routerLink="/example" mat-button>Example</button>
+    <span>Waterway Litter</span>
+    <button routerLink="/" mat-button>Home</button>
+    <button routerLink="/example" mat-button>Example</button>
   </mat-toolbar>
 </nav>
