--- a/apps/rubbish/src/styles.css
+++ b/apps/rubbish/src/styles.css
@@ -7,3 +7,12 @@ body {
     margin: 0;
     font-family: Roboto, sans-serif;
 }
+
+.section {
+    padding: 10px 15px;
+    border-bottom: 1px #9a9a solid;
+}
+
+.header {
+    text-align: center;
+}
