Created moderatorsportal component, created delete images frontend.

--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -3,5 +3,6 @@
     <span>Waterway Litter</span>
     <button routerLink="/" mat-button>Home</button>
     <button routerLink="/example" mat-button>Example</button>
+    <button routerLink="/moderatorportal" mat-button>Admin Portal</button>
   </mat-toolbar>
 </nav>
