--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -2,5 +2,6 @@
   <ul>
     <li><a routerLink="/example">Example</a></li>
     <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/uploader">Upload Your Image</a></li>
   </ul>
 </nav>
