Added user portal component, updated upload to material.

--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar color="primary">
     <span>Waterway Litter</span>
     <button routerLink="/" mat-button>Home</button>
-    <button routerLink="/uploader" mat-button>Upload Your Image</button>
+    <button routerLink="/userportal" mat-button>User Portal</button>
     <button routerLink="/example" mat-button>Example</button>
     <button routerLink="/moderatorportal" mat-button>Admin Portal</button>
   </mat-toolbar>
