--- a/apps/rubbish/src/app/app.component.html
+++ b/apps/rubbish/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-nav></app-nav>
-<router-outlet></router-outlet>
+<app-header [title]="title"></app-header>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
