--- a/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
+++ b/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
@@ -1,4 +1,4 @@
-<div class="section header">
+<div class="header">
   <h2>Welcome Admin!</h2>
   <p>Use the tabs below to perform different administration tasks...</p>
 </div>
