--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -5,5 +5,7 @@
     <button routerLink="/userportal" mat-button>User Portal</button>
     <button routerLink="/example" mat-button>Example</button>
     <button routerLink="/moderatorportal" mat-button>Admin Portal</button>
+    <span class="example-spacer"></span>
+    <button routerLink="/moderatorportal" mat-button><mat-icon>account_circle</mat-icon> Login</button>
   </mat-toolbar>
 </nav>
