It was a lot harder than I had anticipated

--- a/apps/rubbish/src/app/app.component.html
+++ b/apps/rubbish/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
-<app-header [title]="title"></app-header>
+<app-header [title]="title" *ngIf="!hide"></app-header>
 <div class="content">
   <router-outlet></router-outlet>
 </div>
