Grid gui for browsing images.

--- a/apps/rubbish/src/app/home/home.component.html
+++ b/apps/rubbish/src/app/home/home.component.html
@@ -10,3 +10,7 @@
     The more litter you identify and remove from your local waterways, the more points you will earn.
   </p>
 </div>
+
+<div class="section">
+  <app-browse-images></app-browse-images>
+</div>
