Image Preview is now shown when selecting an image.

--- a/apps/rubbish/src/app/user-upload/user-upload.component.html
+++ b/apps/rubbish/src/app/user-upload/user-upload.component.html
@@ -15,10 +15,15 @@
 
   <div id="image-upload">
     <button mat-raised-button color="primary" (click)="fileInput.click()">Choose Image</button>
-    <span>Some text</span>
+    
   </div>
+  <div align="center">
+    <br />
+    <img [src]="localImage" *ngIf="localImage">
+  </div>
+  <button mat-raised-button class="submit-btn" color="primary" (click)="onUploadFile()">Upload File</button>
 
-  <button mat-raised-button class="submit-btn" color="primary" (click)="onUploadFile()" >Upload File</button>
+
 
   <input style="display: none;" #fileInput name="image" type="file" (change)="onFileSelected($event)">
 </form>
