--- a/apps/rubbish/src/app/userportal/userportal.component.html
+++ b/apps/rubbish/src/app/userportal/userportal.component.html
@@ -7,6 +7,7 @@
   <mat-card>
     <mat-card-content>
       <mat-tab-group>
+
         <mat-tab label="Upload Images">
           <div class="tab-content">
 
@@ -20,7 +21,15 @@
             </div>
           </div>
         </mat-tab>
+
+        <mat-tab label="My Images">
+          <div class="tab-content">
+            <app-browse-images [mine]="true"></app-browse-images>
+          </div>
+        </mat-tab>
+
       </mat-tab-group>
     </mat-card-content>
   </mat-card>
+
 </div>
