A bunch of changes

--- a/apps/rubbish/src/app/image/image.component.html
+++ b/apps/rubbish/src/app/image/image.component.html
@@ -1,4 +1,1 @@
-<div #container class="container">
-  <img #image [src]="src">
-  <canvas #overlay></canvas>
-</div>
+<div #container class="container"><img #image [src]="src"><canvas #overlay></canvas></div>
