--- a/apps/rubbish/src/app/app.component.html
+++ b/apps/rubbish/src/app/app.component.html
@@ -1,6 +1,10 @@
-<app-nav></app-nav>
-<app-header [title]="title" *ngIf="!hide"></app-header>
-<div class="content">
-  <router-outlet></router-outlet>
+<div class="container-fluid">
+  <app-nav></app-nav>
+    <div class="row justify-content-md-center">
+      <app-header [title]="title" *ngIf="!home"></app-header>
+      <div class="col-md-12">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
