--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -1,11 +1,16 @@
 <nav>
-  <mat-toolbar color="primary">
-    <span>Waterway Litter</span>
-    <button routerLink="/" mat-button>Home</button>
-    <button *ngIf="loggedIn" routerLink="/userportal" mat-button>User Portal</button>
-    <button *ngIf="admin" routerLink="/moderatorportal" mat-button>Admin Portal</button>
-    <span class="example-spacer"></span>
-    <button *ngIf="!loggedIn" routerLink="/login" mat-button><mat-icon>account_circle</mat-icon> Login</button>
-    <button *ngIf="loggedIn" (click)="logout()" mat-button><mat-icon>account_circle</mat-icon> Logout</button>
-  </mat-toolbar>
+  <div class="row justify-content-md-center">
+    <div class="col-md-8">
+      <mat-toolbar>
+        <span class="nav-title">Waterway Litter</span>
+        <button routerLink="/" mat-button>Home</button>
+        <button routerLink="/browse-public" mat-button>Browse Waterways</button>
+        <button *ngIf="loggedIn" routerLink="/userportal" mat-button>User Portal</button>
+        <button *ngIf="admin" routerLink="/moderatorportal" mat-button>Admin Portal</button>
+        <span class="example-spacer"></span>
+        <button *ngIf="!loggedIn" routerLink="/login" mat-button><mat-icon>account_circle</mat-icon> Login</button>
+        <button *ngIf="loggedIn" (click)="logout()" mat-button><mat-icon>account_circle</mat-icon> Logout</button>
+      </mat-toolbar>
+    </div>
+  </div>
 </nav>
