--- a/apps/rubbish/src/app/home/home.component.html
+++ b/apps/rubbish/src/app/home/home.component.html
@@ -1,16 +1,22 @@
-<div class="section">
-  <h4>Why {{appName}}?</h4>
-  <p>We want to educate people on the impact of waterway litter in an interactive and rewarding way. That's why we created {{appName}}.</p>
-</div>
+<div class="row justify-content-md-center">
+  <div class="col-md-12 home-header-image">
+    <div class="home-header-container">
+      <h1 class="home-image-header">Waterway Litter</h1>
+      <h4 class="image-subheader">Join the fight against litter in your local waterways!</h4>
+      <a class="btn btn-primary image-cta" href="#" role="button">Browse Images Now</a>
+    </div>
+  </div>
 
-<div class="section">
-  <h4>How to use {{appName}}?</h4>
-  <p>
-    Upload an image to our service and using computer vision technology our servers will identify different types of litter in your photo.
-    The more litter you identify and remove from your local waterways, the more points you will earn.
-  </p>
-</div>
-
-<div class="section">
-  <app-browse-images></app-browse-images>
+  <div class="col-md-12 section">
+    <h4>Why {{appName}}?</h4>
+    <p>We want to educate people on the impact of waterway litter in an interactive and rewarding way. That's why we created {{appName}}.</p>
+  </div>
+  
+  <div class="col-md-12 section-alt">
+    <h4>How to use {{appName}}?</h4>
+    <p>
+      Upload an image to our service and using computer vision technology our servers will identify different types of litter in your photo.
+      The more litter you identify and remove from your local waterways, the more points you will earn.
+    </p>
+  </div>
 </div>
