--- a/apps/rubbish/src/app/image/image.component.html
+++ b/apps/rubbish/src/app/image/image.component.html
@@ -1,1 +1,1 @@
-<div #container class="container"><img #image [src]="src"><canvas #overlay></canvas></div>
+<div class="pos-rel"><img #image [src]="src"><canvas #overlay></canvas></div>
