--- a/apps/rubbish/src/app/auth/auth.component.html
+++ b/apps/rubbish/src/app/auth/auth.component.html
@@ -14,7 +14,7 @@
         </mat-error>
       </mat-form-field>
 
-  <button mat-raised-button color="primary" type="submit">{{ (login) ? "Login" : "Signup" }}</button>
+  <button class="btn btn-primary" type="submit">{{ (login) ? "Login" : "Signup" }}</button>
 
   </form>
 
