--- a/apps/rubbish/src/app/header/header.component.css
+++ b/apps/rubbish/src/app/header/header.component.css
@@ -1,5 +1,15 @@
 /* Header Component CSS file */
-
-.header {
+.header-image {
+  background: url("assets/images/waterways-header.jpg") 50% 60%;
+  width: 100%;
+  height: 250px;
   text-align: center;
+  position: relative;
+}
+
+.header-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
