--- a/apps/rubbish/src/app/header/header.component.html
+++ b/apps/rubbish/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<div class="section header">
-  <h2>{{title}}</h2>
-  <p>Join the fight against Waterway Litter!</p>
+<div class="col-md-12 header-image">
+  <div class="header-container">
+    <h1 class="image-header">{{title}}</h1>
+  </div>
 </div>
