Portals changed over to use bootstrap.

--- a/apps/rubbish/src/app/home/home.component.html
+++ b/apps/rubbish/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="home-header-container">
       <h1 class="home-image-header">Waterway Litter</h1>
       <h4 class="image-subheader">Join the fight against litter in your local waterways!</h4>
-      <a class="btn btn-primary image-cta" href="#" role="button">Browse Images Now</a>
+      <a class="btn btn-primary image-cta" href="/browse-public" role="button">Browse Images Now</a>
     </div>
   </div>
 
