--- a/apps/rubbish/src/app/userportal/userportal.component.html
+++ b/apps/rubbish/src/app/userportal/userportal.component.html
@@ -1,35 +1,27 @@
-<div class=" header">
-  <h2>Welcome User!</h2>
-  <p>Use the tabs below to view your account and perform different actions...</p>
-</div>
-
-<div class="section">
-  <mat-card>
-    <mat-card-content>
-      <mat-tab-group>
-
-        <mat-tab label="Upload Images">
-          <div class="tab-content">
-
-            <div class="section">
-              <p>Instructions: Upload an image by using the image uploader module below. Please upload good quality images that are preferrably in jpeg format.
-              </p>
-            </div>
-
-            <div class="section upload-image">
-              <app-user-upload></app-user-upload>
-            </div>
-          </div>
-        </mat-tab>
-
-        <mat-tab label="My Images">
-          <div class="tab-content">
-            <app-browse-images [mine]="true"></app-browse-images>
-          </div>
-        </mat-tab>
-
-      </mat-tab-group>
-    </mat-card-content>
-  </mat-card>
-
+<div class="row justify-content-md-center">
+  <div class="col-md-12 section">
+    <h4 class="header">Welcome User!</h4>
+    <p>Use the tabs below to view your account and perform different actions...</p>
+    <mat-card>
+        <mat-card-content>
+          <mat-tab-group>
+            <mat-tab label="Upload Images">
+              <div class="tab-content">
+                  <p>Instructions: Upload an image by using the image uploader module below. Please upload good quality images that are preferrably in jpeg format.
+                  </p>
+  
+                <div class="upload-image">
+                  <app-user-upload></app-user-upload>
+                </div>
+              </div>
+            </mat-tab>
+            <mat-tab label="My Images">
+              <div class="tab-content">
+                <app-browse-images [mine]="true"></app-browse-images>
+              </div>
+            </mat-tab>
+          </mat-tab-group>
+        </mat-card-content>
+      </mat-card>
+  </div>
 </div>
