--- a/apps/rubbish/src/app/browse-images/browse-images.component.html
+++ b/apps/rubbish/src/app/browse-images/browse-images.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <div class="row">
       <div class="col-md-3" *ngFor="let image of images">
-        <div class="img-fluid">
+        <div class="image-single">
           <image [src]="'/assets/' + image.fileName" [dets]="image.detections"></image>
         </div>
       </div>
