--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -1,16 +1,28 @@
-<nav>
-  <div class="row justify-content-md-center">
-    <div class="col-md-8">
-      <mat-toolbar>
-        <span class="nav-title">Waterway Litter</span>
-        <button routerLink="/" mat-button>Home</button>
-        <button routerLink="/browse-public" mat-button>Browse Waterways</button>
-        <button *ngIf="loggedIn" routerLink="/userportal" mat-button>User Portal</button>
-        <button *ngIf="admin" routerLink="/moderatorportal" mat-button>Admin Portal</button>
-        <span class="example-spacer"></span>
-        <button *ngIf="!loggedIn" routerLink="/login" mat-button><mat-icon>account_circle</mat-icon> Login</button>
-        <button *ngIf="loggedIn" (click)="logout()" mat-button><mat-icon>account_circle</mat-icon> Logout</button>
-      </mat-toolbar>
-    </div>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
+  <div class="top-bar">
+    <a class="navbar-brand nav-title" href="/">Waterway Litter</a>
+    <button class="navbar-toggler hidden-sm-up" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" data-target="#navbarsDefault" aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fas fa-bars"></i>
+    </button>
+  </div>
+  <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarsDefault">
+    <ul class="nav-list navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/browse-public">Images</a>
+      </li>
+      <li class="nav-item" *ngIf="loggedIn">
+        <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/userportal">User Portal</a>
+      </li>
+      <li class="nav-item" *ngIf="admin">
+        <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/moderatorportal">Admin Portal</a>
+      </li>
+      <li class="nav-item pull-right">
+        <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" *ngIf="!loggedIn" routerLink="/login"><i class="fas fa-user mobile-hide"></i> Login</a>
+        <a class="nav-link login-btns" *ngIf="loggedIn" (click)="logout(); isNavbarCollapsed = !isNavbarCollapsed"><i class="fas fa-user mobile-hide"></i> Logout</a>
+      </li>
+    </ul>
   </div>
 </nav>
