Updated the browse images grid to be responsive and use bs.

--- a/apps/rubbish/src/app/image/image.component.html
+++ b/apps/rubbish/src/app/image/image.component.html
@@ -1,1 +1,1 @@
-<div class="pos-rel"><img #image [src]="src"><canvas #overlay></canvas></div>
+<div class="pos-rel"><img [class.portait]="portrait" class="inner-image" #image [src]="src"><canvas #overlay></canvas></div>
