--- a/apps/rubbish/src/app/browse-images/browse-images.component.css
+++ b/apps/rubbish/src/app/browse-images/browse-images.component.css
@@ -1,26 +1,23 @@
 /* Browse image css */
 
-/* .image-single {
-  width: 100%;
+.image-single {
   height: 100%;
-  overflow: hidden;
-
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: center;
-
-  box-sizing: border-box;
-  padding-bottom: 25px;
+  border: 2px solid #333;
 }
 
-.image-single img {
-  max-width: 100%;
-} */
+.image-cont-row {
+  text-align: center;
+}
 
 .image-container {
-  
+  height: 300px;
+  width: 300px;
+  padding: 15px;
+  display: inline-block;
 }
 
-.image-desc {
-  
+@media only screen and (max-width: 330px) {
+  .image-container {
+    width: 100%;
+  }
 }
