--- a/apps/rubbish/src/app/browse-images/browse-images.component.html
+++ b/apps/rubbish/src/app/browse-images/browse-images.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
-    <div class="row">
-      <div class="col-md-3" *ngFor="let image of images">
+    <div class="image-cont-row">
+      <div class="small medium large image-container" *ngFor="let image of images">
         <div class="image-single">
           <image [src]="'/assets/' + image.fileName" [dets]="image.detections"></image>
         </div>
