--- a/apps/rubbish/src/app/image/image.component.scss
+++ b/apps/rubbish/src/app/image/image.component.scss
@@ -1,16 +1,33 @@
 .pos-rel {
 
     position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 
     img {
-        width: 100%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        height: 100%;
+        width: auto;
+        -webkit-transform: translate(-50%,-50%);
+            -ms-transform: translate(-50%,-50%);
+                transform: translate(-50%,-50%);
+        
+        &.portait {
+            width: 100%;
+            height: auto;
+        }
     }
 
     canvas {
         position: absolute;
-        top: 0;
-        left: 0;
-        z-index: 10;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%,-50%);
+            -ms-transform: translate(-50%,-50%);
+                transform: translate(-50%,-50%);
         width: 100%;
         height: 100%;
     }
