--- a/apps/rubbish/src/app/header/header.component.css
+++ b/apps/rubbish/src/app/header/header.component.css
@@ -1,6 +1,7 @@
 /* Header Component CSS file */
 .header-image {
-  background: url("assets/images/waterways-header.jpg") 50% 60%;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('assets/images/waterways-header.jpg');
+  background-size: cover;
   width: 100%;
   height: 250px;
   text-align: center;
