Added a logo and other images to the main page.

--- a/apps/rubbish/src/app/footer/footer.component.html
+++ b/apps/rubbish/src/app/footer/footer.component.html
@@ -1,6 +1,9 @@
 <footer>
   <div class="row justify-content-md-center">
     <div class="col-md-8">
+      <img class="logo" width="200px" src="assets/images/waterways-logo.png">
+    </div>
+    <div class="col-md-8">
       <h4 class="footer-logo">Waterway Litter</h4>
     </div>
     <div class="col-md-8 footer-social">
