--- a/apps/rubbish/src/app/home/home.component.html
+++ b/apps/rubbish/src/app/home/home.component.html
@@ -8,15 +8,48 @@
   </div>
 
   <div class="col-md-12 section">
-    <h4>Why {{appName}}?</h4>
-    <p>We want to educate people on the impact of waterway litter in an interactive and rewarding way. That's why we created {{appName}}.</p>
+    <div class="row">
+      <div class="col-md-8">
+        <h4>Why {{appName}}?</h4>
+        <p>
+          You might be surprised to hear that approximately <strong>11 million tonnes</strong> of waste exists in Australia's biggest "waste dump",
+           The Great Pacific Garbage Patch, which lies in the Pacific Ocean. We have found through various statistics detailing that <strong>80%</strong>
+            of this waste has come from local waterways which then lead out to sea.
+        </p>
+        <p>
+          That's why we created {{appName}}! We want to educate people on the impact of waterway litter in an interactive and rewarding way. 
+          The aim of Waterways Litter is to create awareness around the impact of littering on the world's waterways. 
+          By creating a fun and interactive service that also educates users as they participate,
+           our goal is to change the way people think about litter and the disposal of it.
+        </p>
+      </div>
+      <div class="col-md-4">
+        <img src="assets/images/great-garbage-patch.jpg" width="100%" alt="The Great Pacific Garbage Patch" />
+      </div>
+    </div>
   </div>
   
   <div class="col-md-12 section-alt">
-    <h4>How to use {{appName}}?</h4>
-    <p>
-      Upload an image to our service and using computer vision technology our servers will identify different types of litter in your photo.
-      The more litter you identify and remove from your local waterways, the more points you will earn.
-    </p>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="assets/images/waterways-desktop-view.png" width="100%" alt="Waterways Desktop" />
+      </div>
+      <div class="col-md-8">
+        <h4>How to use {{appName}}?</h4>
+        <p>
+          You can use the Waterways Litter application on any device; desktop, laptop, tablet, or mobile phone. 
+          All you need is an internet connection so that you can access our servers.
+        </p>
+        <p>
+          Simply create an account and upload an image by heading on over to your profile page.
+          Add in a title, description, and an image that you took of rubbish in a local waterway.
+          Then, our servers, using the latest computer vision technology, will identify different types of litter in your photo.
+          Your image will now be publically visible for all to see your findings. It will also provide much needed data to make up the statistics on our site.
+        </p>
+        <p>
+          <i>Start cleaning up your local waterway today and help promote a cleaner tomorrow!</i>
+        </p>
+      </div>
+    </div>
   </div>
 </div>
