--- a/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
+++ b/apps/rubbish/src/app/moderatorportal/moderatorportal.component.html
@@ -49,3 +49,14 @@
     </mat-card>
   </div>
 </div>
+
+<ng-template #deleteImage>
+    <h1 mat-dialog-title>Delete?</h1>
+    <mat-dialog-content>
+      Are you sure you want to delete this image?
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-button mat-dialog-close>Close</button>
+      <button mat-raised-button color="warn" [mat-dialog-close]="true">Delete</button>
+    </mat-dialog-actions>
+</ng-template>
