Moderator portal shows flagged images. Deleting Images works, still need to finalise accepting routes.

--- a/apps/rubbish/src/app/moderatorportal/moderatorportal.component.css
+++ b/apps/rubbish/src/app/moderatorportal/moderatorportal.component.css
@@ -4,6 +4,10 @@
   background-color: red;
   color: #fff;
 }
+.accept-btn {
+  background-color: greenyellow;
+  color: #fff;
+}
 
 .mat-column-title .mat-cell, .mat-column-url .mat-cell {
   padding-right: 10px;
