Added: account data portal

--- a/apps/rubbish/src/app/account-data/account-data.component.html
+++ b/apps/rubbish/src/app/account-data/account-data.component.html
@@ -1,3 +1,7 @@
-<p>
-  account-data works!
-</p>
+<mat-form-field>
+    <input matInput name="name" placeholder="Name" [value]="user.name || (user.facebook || {}).name || (user.google || {}).name">
+</mat-form-field>
+<br>
+<mat-form-field>
+    <input matInput name="email" placeholder="Email" [value]="user.email">
+</mat-form-field>
