--- a/apps/rubbish/src/app/browse-images/browse-images.component.scss
+++ b/apps/rubbish/src/app/browse-images/browse-images.component.scss
@@ -14,7 +14,7 @@
     z-index: 200;
     opacity: 0;
     transition: opacity 0.2s;
-    background: rgba(black, 0.3);
+    background: rgba(white, 0.6);
 
     button {
       outline: none;
@@ -60,4 +60,22 @@ ngb-pagination {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.edit-btn {
+  color: #999;
+  transition: all 0.2s;
+
+  &:hover {
+    color: #282828;
+  }
+}
+
+.delete-btn {
+  color: #d3434a;
+  transition: all 0.2s;
+
+  &:hover {
+    color: #b42a30;
+  }
 }
