--- a/apps/rubbish/src/app/userportal/userportal.component.html
+++ b/apps/rubbish/src/app/userportal/userportal.component.html
@@ -20,6 +20,11 @@
                 <app-browse-images [mine]="true"></app-browse-images>
               </div>
             </mat-tab>
+            <mat-tab label="My Messages">
+              <div class="tab-content">
+                <app-message-hub></app-message-hub>
+              </div>
+            </mat-tab>
           </mat-tab-group>
         </mat-card-content>
       </mat-card>
