--- a/apps/rubbish/src/app/nav/nav.component.html
+++ b/apps/rubbish/src/app/nav/nav.component.html
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/browse-public">Images</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/leaderboard">Leaderboard</a>
+      </li>
       <li class="nav-item" *ngIf="loggedIn">
         <a class="nav-link" (click)="isNavbarCollapsed = !isNavbarCollapsed" routerLink="/userportal">User Portal</a>
       </li>
