--- a/apps/rubbish/src/app/leaderboard/leaderboard.component.html
+++ b/apps/rubbish/src/app/leaderboard/leaderboard.component.html
@@ -5,13 +5,34 @@
     <mat-card>
       <mat-card-content>
         <mat-tab-group>
+
           <mat-tab label="Postcode">
             <!--POSTCODE LEADERBOARD-->
             <div class="tab-content">
-              <p>Please enter a postcode to view the leaderboards:
-                <mat-form-field>
-                  <input matInput [(ngModel)]="postcode" placeholder="postcode" />
-                </mat-form-field></p>
+              <p>Please enter a postcode to view the leaderboards:<br /></p>
+              <mat-form-field>
+                <input matInput [(ngModel)]="postcodeText" #postalCode maxlength="4" placeholder="Please enter postcode" />
+                <button mat-flat-button (click)="fetchPostcode()">Select</button>
+
+                <mat-table #table accesskey="leaderboardPostcodeSource" matSort>
+
+                  <!--Name Column-->
+                  <ng-container matColumnDef="name">
+                    <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+                  </ng-container>
+
+                  <!--Score Column-->
+                  <ng-container matColumnDef="points">
+                    <mat-header-cell *matHeaderCellDef>Points</mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.points}}</mat-cell>
+                  </ng-container>
+
+                  <mat-header-row *matHeaderRowDef="leaderboardDisplayColumns"></mat-header-row>
+                  <mat-row *matRowDef="let row; columns: leaderboardDisplayColumns;"></mat-row>
+                </mat-table>
+
+              </mat-form-field>
             </div>
           </mat-tab>
 
@@ -20,27 +41,62 @@
             <!--STATE LEADERBOARD-->
             <div class="tab-content">
               <p>
-                Please select a state:
+                Please select a state: <br />
                 <mat-form-field>
-                  <mat-select placeholder="Select State">
-                    <mat-option *ngFor="let state of states"[value]="state.value">
+                  <mat-select (selectionChange)="fetchState($event)" placeholder="Select State">
+                    <mat-option *ngFor="let state of states" [value]="state.value">
                       {{state.viewValue}}
                     </mat-option>
-                        
                   </mat-select>
                 </mat-form-field>
               </p>
+
+              <mat-table #table accesskey="leaderboardStateSource" matSort>
+
+                <!--Name Column-->
+                <ng-container matColumnDef="name">
+                  <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                  <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+                </ng-container>
+
+                <!--Score Column-->
+                <ng-container matColumnDef="points">
+                  <mat-header-cell *matHeaderCellDef>Points</mat-header-cell>
+                  <mat-cell *matCellDef="let element">{{element.points}}</mat-cell>
+                </ng-container>
+
+                <mat-header-row *matHeaderRowDef="leaderboardDisplayColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: leaderboardDisplayColumns;"></mat-row>
+              </mat-table>
+
+
             </div>
           </mat-tab>
-
-          
-
-
 
 
           <mat-tab label="National">
             <!--ALL OF AUSTRALIA LEADERBOARD-->
             <div class="tab-content">
+
+              <mat-table #table accesskey="leaderboardSource" matSort>
+
+                <!--Name Column-->
+                <ng-container matColumnDef="name">
+                  <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                  <mat-cell *matCellDef="let element">{{element.name}}</mat-cell>
+                </ng-container>
+
+                <!--Score Column-->
+                <ng-container matColumnDef="points">
+                  <mat-header-cell *matHeaderCellDef>Points</mat-header-cell>
+                  <mat-cell *matCellDef="let element">{{element.points}}</mat-cell>
+                </ng-container>
+
+                <mat-header-row *matHeaderRowDef="leaderboardDisplayColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: leaderboardDisplayColumns;"></mat-row>
+              </mat-table>
+
+
             </div>
           </mat-tab>
 
